--- a/kmaps-app/src/search/FacetBox.scss
+++ b/kmaps-app/src/search/FacetBox.scss
@@ -1,9 +1,9 @@
 .c-FacetBox--expander.open {
-    max-height: 15rem !important;
+    max-height: 15rem;
 }
 .c-FacetBox--expander.closed {
-    max-height: 0 !important;
-    border-color: transparent !important;
-    border-width: 0 !important;
-    margin: 0 !important;
+    max-height: 0;
+    border-color: transparent;
+    border-width: 0;
+    margin: 0;
 }
