Fix 'Total Results' button

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -569,7 +569,7 @@ div.image-wrapper.center figcaption {
         &:hover {
             opacity: 1;
         }
-        > a {
+        button {
             color: #fff;
             background-color: #3f49b1;
             border: none;
