Adding titles back into Images

--- a/kmaps-app/src/views/Images/images.scss
+++ b/kmaps-app/src/views/Images/images.scss
@@ -13,6 +13,13 @@
 .c-image {
     //  background-color: #fafafa;
 }
+
+.c-image h1.title {
+    min-height: 25px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 .c-image__viewer {
     background-color: #222222;
     border-bottom: 10px solid #b49c59;
