--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -5,12 +5,12 @@ ul.fancytree-container {
 }
 .c-kmaptree {
     margin: 0 1rem;
-    min-height: calc(100vh - 33.25rem);
-    max-height: calc(100vh - 33.25rem);
+    min-height: calc(100vh - 33rem);
+    max-height: calc(100vh - 33rem);
     overflow-y: scroll;
     border-style: solid;
-    border-color: #929ae4 #929ae4 #929ae4 #ddd;
-    border-width: 0.2rem 0.15rem 0.3rem 0.1rem;
+    border-color: #929ae4 #929ae4 #929ae4 #c0c0c0;
+    border-width: 0.2rem 0.15rem 0.3rem 0.15rem;
     border-radius: 0.5rem 0.5rem 3rem 0.5rem;
     background: white;
     font-size: 1.25rem;
@@ -18,7 +18,7 @@ ul.fancytree-container {
     white-space: nowrap;
     box-shadow: inset -0.5rem -2rem 3rem #c0cbd04d;
     transition: max-width 0.75s;
-    transition-delay: 0.2s;
+    transition-delay: 0.5s;
 }
 .l-column__search .c-kmaptree {
     /* max-height: 75rem;
@@ -40,13 +40,13 @@ ul.fancytree-container {
 }
 .c-perspective-select {
     white-space: nowrap;
-    font-size: 1.15rem;
+    font-size: 1.2rem;
     margin-top: 0.75rem;
     label {
         display: inline-block;
         font-weight: bold;
-        margin-right: 0.5rem;
-        font-size: 1.35rem;
+        margin-right: 0;
+        font-size: 1.25rem;
     }
     label a {
         margin-left: 0.5rem;
@@ -110,7 +110,7 @@ ul.fancytree-container {
 
 .leafend {
     padding-left: 0.3rem;
-
+    line-height: 1;
     .toggle-icon::before {
         content: '';
         width: 0.7rem;
