--- a/kmaps-app/src/views/Terms/TermDefinitions/TermDefinitionsResources/TermDefinitionsResources.css
+++ b/kmaps-app/src/views/Terms/TermDefinitions/TermDefinitionsResources/TermDefinitionsResources.css
@@ -1,13 +1,14 @@
 .sui-termDefResource__header {
-    text-transform: uppercase;
-    margin-bottom: 1.6rem;
-    font-size: smaller;
+    margin-bottom: 0.6rem;
+    font-size: 1.35rem;
+    color: #000;
 }
 .sui-termDefResource__content > button {
     margin-right: 1.6rem;
 }
 .sui-termDefResource__content > button.btn.btn-outline-dark {
-    font-size: 1.5rem;
+    font-size: 1.35rem;
+    padding: 0.25rem 1rem;
     border: 1px solid transparent;
 }
 .sui-termDefResource__content > button.btn.btn-outline-dark:hover {
