STyle updates Terms and Subjects overview layout and formatting

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -774,7 +774,8 @@ div.image-wrapper.center figcaption {
 }
 
 .sui-nameEntry-meta {
-    margin-top: 0.75rem;
+    margin-top: 0.1rem;
+    padding-bottom: 1rem;
 }
 
 .u-search__results__wrap {
