--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -465,6 +465,7 @@ div.image-wrapper.center figcaption {
                 color: #000;
                 letter-spacing: 0.0375rem;
                 position: relative;
+                cursor: default;
                 &:nth-of-type(2) {
                     width: 38%;
                 }
@@ -733,7 +734,7 @@ div.image-wrapper.center figcaption {
         background-color: transparent;
         cursor: col-resize !important;
         &::before {
-            height: 80vh;
+            height: 88vh;
             position: relative;
             left: -0.1rem;
             top: 1rem;
@@ -743,9 +744,9 @@ div.image-wrapper.center figcaption {
             border-style: solid;
             border-left-style: dotted;
             border-color: $color-mandala;
-            border-width: 2.5rem 0 2.5rem 0.25rem;
+            border-width: 3.5rem 0 3.5rem 0.2rem;
             border-radius: 0.5rem 0 0 0.5rem;
-            opacity: 0.15;
+            opacity: 0.25;
             transition: all 0.25s;
         }
     }
@@ -769,7 +770,7 @@ div.image-wrapper.center figcaption {
         opacity: 0.75;
         border-left-color: #929ae4;
         background-size: 0.325rem 0.325rem;
-        border-width: 1.5rem 0.1rem 1.5rem 0.1rem;
+        border-width: 2rem 0.1rem 2rem 0.1rem;
     }
 }
 
