--- a/kmaps-app/src/main/RightSideBar.css
+++ b/kmaps-app/src/main/RightSideBar.css
@@ -176,7 +176,7 @@
 .sui-advTerm {
     font-size: 1.175rem;
     padding: 0.8rem 0.5rem 0.3rem 0;
-    margin: 0.5rem 0 0.2rem;
+    margin: 0.5rem 0.5rem 0.2rem;
     text-transform: capitalize;
     cursor: default;
     color: #000;
@@ -243,7 +243,7 @@
     /* padding: 0.3rem 0.8rem; */
     font-size: 1.3rem;
     color: #333;
-    margin: 0 0 0.75rem;
+    margin: 0 0.5rem 0.75rem 0.5rem;
     overflow: auto !important;
     box-shadow: inset -1rem -2rem 1.5rem #c9ccd82b;
     transition: max-height 0.35s, border 0.25s, margin 0.25s;
