--- a/kmaps-app/src/views/Terms/TermDictionaries/TermDictionaries.css
+++ b/kmaps-app/src/views/Terms/TermDictionaries/TermDictionaries.css
@@ -2,14 +2,15 @@
     margin-bottom: 3.2rem;
 }
 .sui-termDicts__title {
-    font-size: 14px;
+    font-size: 1.75rem;
     text-transform: uppercase;
-    font-weight: 700;
     color: #fff;
     letter-spacing: 0.1rem;
     display: block;
     background: #91693e;
-    padding: 0.8rem 1.6rem;
+    padding: 1rem 1.6rem 0.8rem;
+    border-left: 1.25rem double #fff;
+    margin-left: -0.5rem;
 }
 .sui-termDicts__content {
     padding: 1.6rem;
