--- a/kmaps-app/src/views/Terms/TermNames/NameEntry.css
+++ b/kmaps-app/src/views/Terms/TermNames/NameEntry.css
@@ -2,7 +2,7 @@
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
-.sui-nameEntry__wrapper .term__id {
+.sui-nameEntry__wrapper .term_id {
     margin: 0.75rem 1.5rem;
 }
 .sui-nameEntry {
@@ -25,9 +25,12 @@
 }
 
 .sui-nameEntry-header {
-    font-weight: bolder;
+    font-weight: bold;
     min-width: 15rem;
     display: inline-block;
+
+    min-width: auto;
+    display: block;
 }
 
 ul.sui-nameEntry.first-entry {
@@ -48,7 +51,7 @@ ul.sui-nameEntry.first-entry
 
 ul.sui-nameEntry.first-entry ul {
     padding-left: 0;
-    margin-top: 1.5rem;
+    margin-top: 1rem;
 }
 
 ul.sui-nameEntry.first-entry .sui-nameEntry .sui-nameEntry-header.bo {
@@ -86,4 +89,7 @@ ul.sui-nameEntry.first-entry .sui-nameEntry .sui-nameEntry-header.bo {
 
 .sui-nameEntry-writing-system {
     position: relative;
+}
+
+@media (max-width: 950px) {
 }
