Style update for search filter height expand on hover

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -589,7 +589,7 @@ div.image-wrapper.center figcaption {
             border: none;
             background: transparent;
             font-size: 1.75rem;
-            transition: all 0.2s ease-in-out;
+            transition: all 0.2s;
             transform: scale(1);
             opacity: 0.5;
             position: relative;
