--- a/kmaps-app/src/views/css/Popover.scss
+++ b/kmaps-app/src/views/css/Popover.scss
@@ -5,6 +5,7 @@
     /* position: relative;
     display: inline-block;
     white-space: nowrap; */
+    font-style: italic;
 }
 .kmap-tag-group .deflinks {
     vertical-align: super;
