--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -350,13 +350,6 @@ div.image-wrapper.center figcaption {
     }
 }
 
-.nodeHeader-placesInfo + div {
-    clear: both;
-}
-.nodeHeader-placesInfo .nodeHeader-summary > ul {
-    margin-right: 1rem;
-}
-
 .av .c-nodeHeader-itemHeader {
     background-color: $color-audio-video;
     margin-bottom: -1.8rem;
@@ -366,19 +359,22 @@ div.image-wrapper.center figcaption {
 .c-nodeHeader-itemSummary {
     .featured {
         float: left;
-        margin: 0 2rem 0.5rem 0;
+        margin: 0;
         & > img {
             background-color: #fff;
             border-radius: 0.3rem !important;
             padding: 0.8rem;
             box-shadow: 0 0 5px 1px #999 inset;
-            margin: 0 2rem 0.5rem 1.5rem;
+            margin: 0 2rem 0.5rem 0;
             max-width: 24rem;
         }
         & > p {
             font-size: 1.25rem;
             max-width: 23rem;
-            margin: 0 0 1rem 2rem;
+            margin: 0 0 1rem 0.5rem;
+            line-height: 1.25;
+            font-style: italic;
+            letter-spacing: 0.0175rem;
         }
     }
     .nodeHeader-summary {
@@ -413,7 +409,7 @@ div.image-wrapper.center figcaption {
         }
     }
 }
-
+/*
 @media (min-width: 1150px) {
     .c-nodeHeader-itemSummary {
         .featured {
@@ -437,6 +433,7 @@ div.image-wrapper.center figcaption {
         }
     }
 }
+*/
 
 //
 // SEARCH Section ------- move this
@@ -457,11 +454,11 @@ div.image-wrapper.center figcaption {
         background-color: #fff;
         /*  margin-top: -3.4rem; */
         .nav-tabs {
-            padding: 0 0 0.5rem;
+            padding: 0 0 0.75rem;
             margin: 0 0 0 1rem;
             .nav-link {
-                padding: 0 0.3rem;
-                margin: 0 0 0.1rem;
+                padding: 0;
+                margin: 0;
                 width: 31%;
                 text-align: center;
                 border: none;
@@ -501,9 +498,12 @@ div.image-wrapper.center figcaption {
                     border-style: solid;
                     border-width: 8px 7px 1px 7px;
                     border-color: white;
-                    border-top-color: inherit;
+
+                    border-width: 1px 7px 7px 7px;
+                    border-color: transparent transparent red;
+                    border-bottom-color: inherit;
                     position: absolute;
-                    top: 3.2rem;
+                    bottom: -0.5rem;
                     left: 50%;
                     margin-left: -0.4rem;
                     background: white;
@@ -522,6 +522,7 @@ div.image-wrapper.center figcaption {
         }
         .treeNav-header ~ .nav-tabs .nav-link {
             margin-top: 0;
+            padding-bottom: 0.25rem;
         }
     }
 }
@@ -624,7 +625,7 @@ div.image-wrapper.center figcaption {
             .header-icon svg {
                 font-size: 1.8rem;
                 position: relative;
-                bottom: 0.27rem;
+                bottom: 0.375rem;
                 transition: all 0.2s ease-in-out;
                 transform: scale(1.08);
                 opacity: 0.8;
