--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -62,7 +62,7 @@ h3,
     // height: 100vh; -- causing issues with standalone
     /*  width: 100vw; */
     display: flex;
-    margin: 1rem 1rem 10rem;
+    margin: 1rem 1rem 0;
 }
 .l-site__wrap > *,
 .l-content__main,
