Style updates new search box design, and setting default buttons to cursor default

--- a/kmaps-app/src/main/RightSideBar.css
+++ b/kmaps-app/src/main/RightSideBar.css
@@ -96,7 +96,7 @@
 .sui-advHeader .u-icon__minus {
     font-size: 0.9rem;
     color: #fff;
-    cursor: pointer;
+    cursor: default;
     position: absolute;
     right: 0.9rem;
     top: 0.58rem;
