--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -28,7 +28,9 @@ a {
         color: $link-hover-color;
     }
 }
-
+.btn:not(:disabled):not(.disabled) {
+    cursor: default !important;
+}
 h1,
 .h1,
 h2,
@@ -267,7 +269,7 @@ div.image-wrapper.center figcaption {
     background-color: #fcfcfc;
     border: 1px solid #ccc;
     border-radius: 0.5rem;
-    padding: 0.5rem 1.5rem 4rem 2.5rem;
+    padding: 0.5rem 2.5rem 4rem;
     font-size: 1.375rem;
     /* height: 100vh;*/
     min-height: 70rem;
@@ -587,6 +589,7 @@ div.image-wrapper.center figcaption {
             padding: 0;
             margin: 0;
             border: none;
+            cursor: default;
             background: transparent;
             font-size: 1.75rem;
             position: relative;
@@ -675,6 +678,7 @@ div.image-wrapper.center figcaption {
             padding: 0;
             margin: 0;
             border: none;
+            cursor: default;
             background: transparent;
             font-size: 1.75rem;
             transition: all 2mzs;
