--- a/kmaps-app/src/main/SiteHeader/SiteHeader.scss
+++ b/kmaps-app/src/main/SiteHeader/SiteHeader.scss
@@ -47,55 +47,79 @@
         font-size: 1.5rem;*/
     }
     .c-site__search {
-        display: flex;
+        margin-top: 0.75rem;
+        padding-left: 0.5rem;
         .sui-search1 {
-            .icon {
-                position: relative;
-                left: 2.75rem;
-                bottom: 0;
-                font-size: 1.5rem;
-                color: #555;
-            }
-            .sui-search2 {
-                // --- search input
+            position: relative;
+            right: 1rem;
+            input.sui-search2 {
                 font-style: italic;
                 font-size: 1.65rem;
-                padding: 0.5rem 3rem 0.3rem 3.25rem;
+                padding: 0.4rem 8.5rem 0.2rem 1.75rem;
                 background: transparent;
-                border-color: $color-mandala #ccc;
-                border-width: 0.3rem 0.1rem 0.1rem;
-                margin: 0.6rem 1.25rem 0 0;
-                min-width: 28rem;
+                border: 1px solid #aaa;
+                margin: 0;
+                width: 24rem;
                 box-shadow: inset 0 0.25rem 0.75rem #aaa;
-                &:hover,
-                &:active,
-                &:focus {
-                    border-color: #4d59ca #ccc;
-                    border-width: 0.3rem 0.1rem 0.1rem;
+                border-radius: 2rem;
+                transition: width 0.5s;
+                &:focus,
+                &:active {
+                    width: 32rem;
                 }
             }
-            .l-search__input__buttons {
-                // --- search buttons wrapper
+            .sui-search3 {
                 position: relative;
-                top: 0.6rem;
-                .sui-search3 {
-                    // --- search clear button
-                    font-size: 2.25rem;
-                    color: #ccc;
-                    cursor: pointer;
-                    position: absolute;
-                    right: 2.5rem;
-                    &:hover {
-                        color: red;
-                    }
+                right: 6.65rem;
+                top: 0;
+                display: inline-block;
+                height: 2rem;
+                width: 2rem;
+                &:hover::before {
+                    color: #555;
+                }
+            }
+            .sui-search4 {
+                // --- search enter - Go get it!
+                position: absolute;
+                top: 0.9rem;
+                right: 3.5rem;
+                display: inline-block;
+                span::before {
+                    color: #888;
+                    font-size: 1.6rem;
+                }
+                span:hover::before {
+                    color: #222;
                 }
             }
         }
     }
-    .navbar-collapse {
-        justify-content: center;
+}
+
+input.sui-search2:focus + .sui-search3,
+input.sui-search2:active + .sui-search3 {
+    &::before {
+        content: 'X';
+        display: inline-block;
+        color: #ccc;
+        font-size: 1.75rem;
+        position: absolute;
+        top: 0;
+        right: 1.75rem;
+    }
+    &::after {
+        content: '';
+        display: inline-block;
+        width: 0.15rem;
+        height: 1.75rem;
+        background-color: #c0c0c0;
+        position: absolute;
+        top: 0.5rem;
+        right: 0;
     }
 }
+
 .c-site__header-standalone {
     height: 4.5rem;
     padding: 0;
