css adjust search box position

--- a/kmaps-app/src/main/SiteHeader/SiteHeader.scss
+++ b/kmaps-app/src/main/SiteHeader/SiteHeader.scss
@@ -51,7 +51,6 @@
         padding-left: 0.5rem;
         .sui-search1 {
             position: relative;
-            right: 1rem;
             input.sui-search2 {
                 font-style: italic;
                 font-size: 1.65rem;
@@ -71,7 +70,7 @@
             .sui-search3 {
                 position: relative;
                 right: 6.65rem;
-                top: 0;
+                top: 0.1rem;
                 display: inline-block;
                 height: 2rem;
                 width: 2rem;
