--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -5,24 +5,20 @@ ul.fancytree-container {
 }
 .c-kmaptree {
     margin: 0 1rem;
-    min-height: calc(100vh - 36rem);
-    max-height: calc(100vh - 36rem);
     overflow-y: scroll;
     border-style: solid;
     border-color: #929ae4 #929ae4 #929ae4 #c0c0c0;
+    box-shadow: inset -0.5rem -2rem 3rem #c0cbd04d;
     border-width: 0.2rem 0.15rem 0.3rem 0.15rem;
     border-radius: 0.5rem 0.5rem 3rem 0.5rem;
     background: white;
     font-size: 1.25rem;
     padding: 0 1rem 2rem;
     white-space: nowrap;
-    box-shadow: inset -0.5rem -2rem 3rem #c0cbd04d;
-    transition: max-width 0.75s;
-    transition-delay: 0.5s;
+    min-height: calc(100vh - 36rem);
+    max-height: calc(100vh - 36rem);
 }
 .l-column__search .c-kmaptree {
-    /* max-height: 75rem;
-    min-height: 75rem; */
     min-height: calc(100vh - 13.25rem);
     max-height: calc(100vh - 13.25rem);
     margin: 0;
@@ -30,13 +26,15 @@ ul.fancytree-container {
     padding-left: 2rem;
     border-width: 0 0.1rem 0.3rem 0;
 }
-.tree-test .c-kmaptree {
-    height: 80vh;
-    min-width: 365px;
-    max-height: 80vh;
-    border: 3px inset #5960a7;
-    padding: 1.25rem;
-    font-size: 1.45rem;
+.l-column__related .c-kmaptree {
+    width: 22rem;
+    transition: width 0.6s;
+    transition-delay: 0.5s;
+    min-height: calc(100vh - 38rem);
+    max-height: calc(100vh - 38rem);
+}
+.l-column__related .c-kmaptree:hover {
+    width: 40rem;
 }
 .c-perspective-select {
     white-space: nowrap;
@@ -75,6 +73,20 @@ ul.fancytree-container {
         }
     }
 }
+
+.c-content__main__kmaps .c-kmaptree {
+    /*  border:none; */
+}
+/*
+.tree-test .c-kmaptree {
+    height: 80vh;
+    min-width: 365px;
+    max-height: 80vh;
+    border: 3px inset #5960a7;
+    padding: 1.25rem;
+    font-size: 1.45rem;
+}
+*/
 
 /* Leaf Styles */
 .c-kmapleaf {
