--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -626,12 +626,12 @@ div.image-wrapper.center figcaption {
             padding: 0.3rem 2rem 0.325rem;
             display: inline-block;
             .header-icon svg {
-                font-size: 1.8rem;
+                font-size: 1.95rem;
                 position: relative;
-                bottom: 0.375rem;
+                bottom: 0.275rem;
                 transition: all 0.2s ease-in-out;
                 transform: scale(1.08);
-                opacity: 0.8;
+                opacity: 0.9;
             }
             &:hover .header-icon svg {
                 transform: scale(0.95);
@@ -708,10 +708,10 @@ div.image-wrapper.center figcaption {
 
         button {
             font-style: italic;
-            font-size: 1.15rem;
+            font-size: 1.25rem;
             font-weight: bold;
             letter-spacing: 0.175rem;
-            padding: 0.2rem 1rem 0.25rem;
+            padding: 0.2rem 1rem;
             border: 1px solid #ddd;
             margin: 0 0.35rem;
             border-radius: 0.5rem;
