--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -75,8 +75,10 @@ ul.fancytree-container {
 }
 
 .c-content__main__kmaps .c-kmaptree {
-    /*  border:none; */
+    border: none;
+    box-shadow: none;
 }
+
 /*
 .tree-test .c-kmaptree {
     height: 80vh;
