--- a/kmaps-app/src/views/Kmaps/placesinfo.scss
+++ b/kmaps-app/src/views/Kmaps/placesinfo.scss
@@ -79,6 +79,7 @@
 .nodeHeader-placesInfo + div {
     clear: both;
     max-width: 100%;
+    padding-top: 1rem;
 }
 .nodeHeader-placesInfo .nodeHeader-summary {
     & > ul {
