--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -15,12 +15,14 @@ ul.fancytree-container {
     font-size: 1.25rem;
     padding: 0 1rem 2rem;
     white-space: nowrap;
-    min-height: calc(100vh - 36rem);
-    max-height: calc(100vh - 36rem);
+    /* min-height: calc(100vh - 36rem);
+    max-height: calc(100vh - 36rem); */
+    height: calc(100vh - 36rem);
 }
 .l-column__search .c-kmaptree {
-    min-height: calc(100vh - 13.25rem);
-    max-height: calc(100vh - 13.25rem);
+    /* min-height: calc(100vh - 13.25rem);
+    max-height: calc(100vh - 13.25rem); */
+    height: calc(100vh - 13.25rem);
     margin: 0;
     padding-top: 1rem;
     padding-left: 2rem;
@@ -30,8 +32,7 @@ ul.fancytree-container {
     width: 22rem;
     transition: width 0.6s;
     transition-delay: 0.5s;
-    min-height: calc(100vh - 38rem);
-    max-height: calc(100vh - 38rem);
+    height: calc(100vh - 38rem);
 }
 .l-column__related .c-kmaptree:hover {
     width: 40rem;
@@ -77,6 +78,7 @@ ul.fancytree-container {
 .c-content__main__kmaps .c-kmaptree {
     border: none;
     box-shadow: none;
+    background-color: transparent;
 }
 
 /*
@@ -180,6 +182,8 @@ ul.fancytree-container {
 }
 
 .c-kmaptree span.addinfo {
-    font-size: 80%;
-    color: grey;
+    font-size: 1.2rem;
+    color: #888;
+    margin-left: 1.5rem;
+    font-style: italic;
 }
