--- a/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
+++ b/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
@@ -92,22 +92,24 @@
   */
 
 .c-relatedViewer {
-    margin: 0 1rem 1rem 1.75rem;
+    margin: 0 1rem 2rem 1.75rem;
 }
 .c-related__item {
     display: block;
-    line-height: 1.55;
+    line-height: 1.5;
     padding: 0;
     color: #555;
     font-weight: bold;
-    font-size: 1.5rem;
+    font-size: 1.35rem;
+    text-transform: uppercase;
 }
 .c-related__item.selected > span:not(.icon) {
     /* padding: 0 0.3rem 0.1rem;
     border-bottom: 0.3rem solid #cca843; */
 }
 .c-relatedViewer #sui-rln-places {
-    font-size: 1.25rem;
+    font-size: 1.2rem;
+    margin-left: 0.8rem;
 }
 .c-relatedViewer #sui-rln-places::before {
     content: '(';
@@ -142,8 +144,6 @@
     height: 6px;
 }
 .c-related__item__label {
-    text-transform: capitalize;
-    margin-right: 0.8rem;
 }
 
 .u-related__list__header {
