Style updates in Kmaps viewer making tabs consistent for related info, etc

--- a/kmaps-app/src/views/AudioVideo/AVViewer.css
+++ b/kmaps-app/src/views/AudioVideo/AVViewer.css
@@ -56,8 +56,8 @@
 }
 
 #av-player-row {
-    overflow-x: hidden;
-    overflow-y: visible;
+    /* overflow-x: hidden;
+    overflow-y: visible; */
     height: 800px;
 }
 
