--- a/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
+++ b/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
@@ -342,3 +342,73 @@
 .l-column__related .fancytree-node:not(.fancytree-active):active {
     background-color: #ffffff !important;
 }
+
+// --- moved here from subjectsinfo.scss
+
+.kmaps-related-viewer {
+    a.nav-item {
+        text-align: center;
+        text-transform: uppercase;
+        letter-spacing: 0.1rem;
+        font-weight: bold;
+        font-size: 1.2rem;
+        padding: 1.2rem 2rem 0.75rem;
+        border-color: #ddd;
+        border-radius: 0.75rem 0.75rem 0 0;
+
+        &:hover,
+        &:active,
+        &:focus {
+            border-color: #c0c0c0;
+        }
+
+        &.active {
+            color: #000;
+            border-bottom: thin solid #fff;
+            border-top: 0.3rem solid $color-subjects;
+        }
+    }
+    &.places a.nav-item {
+        &.active {
+            color: #000;
+            border-bottom: thin solid #fff;
+            border-top: 0.3rem solid $color-places;
+        }
+    }
+    & + .tab-content {
+        padding: 2rem 2rem 9rem;
+        background: #fff;
+        border: 1px solid #ccc;
+        border-radius: 1rem;
+        .kmap-related h3 {
+            margin-top: 2rem;
+            font-size: 1.35rem;
+            font-weight: bold;
+        }
+    }
+}
+
+.c-relplaces-list.container-fluid {
+    margin: 2rem;
+    .c-featurePager__container.row {
+        padding: 1rem;
+        margin-left: -1.75rem;
+        background-color: #777;
+        color: white;
+        max-width: 1100px;
+        .c-featurePager__navButtons .icon {
+            color: #bcbcbc;
+
+            &:hover {
+                color: #fff;
+            }
+        }
+    }
+    .c-featurePager__container.row > div {
+        width: 30%;
+        text-align: left;
+    }
+    .row > div {
+        padding-left: 0;
+    }
+}
