--- a/kmaps-app/src/main/ContentHeader/ContentHeader.scss
+++ b/kmaps-app/src/main/ContentHeader/ContentHeader.scss
@@ -36,9 +36,9 @@
 // Breadcrumbs
 .c-content__header__breadcrumb {
     background-color: transparent;
-    font-size: 1.35rem;
+    font-size: 1.25rem;
     padding: 0;
-    margin: 0.3rem 0 0.25rem 3rem;
+    margin: 0.325rem 0 0.25rem 3rem;
 }
 
 .c-content__header__breadcrumb,
@@ -51,7 +51,7 @@
     padding: 0 0 0.1rem;
     border-bottom: 1px solid transparent;
     margin-left: 2rem;
-    transition: border 200ms ease-in-out;
+    transition: border 0.3s;
     position: relative;
 }
 
