--- a/kmaps-app/src/views/Kmaps/subjectsinfo.scss
+++ b/kmaps-app/src/views/Kmaps/subjectsinfo.scss
@@ -10,7 +10,7 @@ ndg, Nov. 11, 2020)
 .subjects .c-content__main__kmaps > .c-subject-info {
     max-width: 85rem;
 }
-
+/*
 .c-content__main__kmaps .featured-image {
     float: right;
     padding: 0.5rem;
@@ -24,7 +24,7 @@ ndg, Nov. 11, 2020)
         box-shadow: 0 0 2px 5px #f5f5f5;
     }
 }
-
+*/
 ul.sui-nameEntry.first-entry
     > li.sui-nameEntry:first-child
     > span.sui-nameEntry-header:first-child {
