--- a/kmaps-app/src/views/Terms/TermDefinitions/TermDefinitions.css
+++ b/kmaps-app/src/views/Terms/TermDefinitions/TermDefinitions.css
@@ -7,20 +7,37 @@
     font-weight: bold;*/
 }
 .sui-termDefinitions__content .tab-content {
-    padding: 0.75rem 1.6rem 1.5rem;
-    /* min-height: 14.4rem; */
+    padding: 1rem 1.6rem 1rem;
+    background: white;
+    border: 0.1rem solid #ccc;
+    border-radius: 1rem;
+    margin-bottom: 2rem;
+    min-height: 10rem;
 }
 .sui-termDefinitions__content .nav.nav-tabs {
-    font-size: 1.25rem;
     padding-left: 2.5rem;
-    border-bottom: 2px solid #ccc;
+    border-bottom: none;
 }
 .sui-termDefinitions__content .nav.nav-tabs > a.nav-item {
-    background: #91693e;
-    color: #f5f5f5;
-    padding: 0.6rem 2rem;
-    margin-bottom: -0.2rem;
+    /*  background: #91693e; */
+    padding: 1.2rem 2rem 0.75rem;
+    margin-bottom: -0.1rem;
+    letter-spacing: 0.1rem;
     font-weight: bold;
+    font-size: 1.2rem;
+    border-radius: 0.75rem 0.75rem 0 0;
+    text-transform: uppercase;
+    border: 0.1rem solid #ddd;
+    border-bottom: none;
+}
+.sui-termDefinitions__content .nav.nav-tabs > a.nav-item:not(.active):hover {
+    border-color: #ccc;
+}
+.sui-termDefinitions__content .nav.nav-tabs > a.nav-item.active {
+    background-color: #fff;
+    border-color: #ccc;
+    border-top: 0.2rem solid #a2733f;
+    color: #222;
 }
 .sui-termDefinitions__content .nav.nav-tabs > a.nav-item.disabled {
     background-color: #c5c5c5;
@@ -31,11 +48,6 @@
 }
 .sui-termDefinitions__content .nav.nav-tabs > a.nav-item + a.nav-item {
     border-left: 1px solid #eee;
-}
-.sui-termDefinitions__content .nav.nav-tabs > a.nav-item.active {
-    background-color: #fcfcfc;
-    border-top: 1px solid #a2733f;
-    color: #222;
 }
 .sui-termDefinitions__content .nav.nav-tabs > a.nav-item.disabled {
     background-color: inherit;
@@ -57,12 +69,6 @@
 .sui-termDefinitions__extra-author,
 .sui-termDefinitions__extra-lang {
     text-transform: uppercase;
-}
-.sui-termDefinitions_wrapper .nav-tabs .nav-link:first-child {
-    border-top-left-radius: 0.75rem;
-}
-.sui-termDefinitions_wrapper .nav-tabs .nav-link:last-child {
-    border-top-right-radius: 0.75rem;
 }
 .sui-termDefinitions__content .nav.nav-tabs > a.nav-item svg {
     display: none;
@@ -90,6 +96,7 @@
         border-radius: 0.75rem;
         opacity: 0.8;
         position: relative;
+        color: #fff;
     }
     .sui-termDefinitions__content .nav.nav-tabs > a.nav-item:hover {
         opacity: 1;
