--- a/kmaps-app/src/views/Terms/TermDictionaries/TermDictionaries.css
+++ b/kmaps-app/src/views/Terms/TermDictionaries/TermDictionaries.css
@@ -2,13 +2,14 @@
     margin-bottom: 3.2rem;
 }
 .sui-termDicts__title {
-    font-size: 1.75rem;
+    font-size: 1.5rem;
     text-transform: uppercase;
     color: #fff;
     letter-spacing: 0.1rem;
     display: block;
     background: #91693e;
     padding: 1rem 1.6rem 0.8rem;
+    border-radius: 0.75rem 0.5rem 0.5rem 0.75rem;
     border-left: 1.25rem double #fff;
     margin-left: -0.5rem;
 }
