--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -766,6 +766,11 @@ div.image-wrapper.center figcaption {
             opacity: 0.2;
             transition: all 0.25s;
         }
+        &:-webkit-direct-focus {
+            outline-color: transparent;
+            outline-style: none;
+            outline-width: 0;
+        }
     }
     &:hover div::before {
         opacity: 0.5;
@@ -773,7 +778,7 @@ div.image-wrapper.center figcaption {
         border-left-width: 0.1rem;
         border-left-style: solid;
         background-color: #fff;
-        background-size: 0.3rem 0.3rem;
+        background-size: 0.375rem 0.375rem;
         background-image: repeating-linear-gradient(
             0deg,
             #444cf7,
