--- a/kmaps-app/src/main/SiteHeader/SiteHeader.scss
+++ b/kmaps-app/src/main/SiteHeader/SiteHeader.scss
@@ -46,6 +46,10 @@
         /* padding: 0;
         font-size: 1.5rem;*/
     }
+
+    // -------------------
+    // --- Search Box ----
+    // -------------------
     .c-site__search {
         margin-top: 0.75rem;
         padding-left: 0.5rem;
@@ -53,17 +57,27 @@
             position: relative;
             input.sui-search2 {
                 font-size: 1.65rem;
-                padding: 0.4rem 8.5rem 0.2rem 1.75rem;
+                padding: 0.4rem 8.5rem 0.15rem 1.75rem;
                 background: transparent;
-                border: 1px solid #aaa;
+                border: none;
+                border-bottom: 0.1rem solid rgba(78, 90, 201, 0.38);
                 margin: 0;
                 width: 24rem;
-                box-shadow: inset 0 0.25rem 0.75rem #aaa;
+                /*  box-shadow: inset 0 0.25rem 0.75rem #aaa; */
                 border-radius: 2rem;
+                border-radius: 0.15rem;
                 transition: width 0.5s;
+                color: #555;
+                box-shadow: none;
+
                 &:focus,
                 &:active {
                     width: 32rem;
+                }
+                &:-webkit-direct-focus {
+                    outline-color: transparent;
+                    outline-style: none;
+                    outline-width: 0;
                 }
             }
             .sui-search3 {
@@ -84,7 +98,7 @@
                 right: 3.5rem;
                 display: inline-block;
                 span::before {
-                    color: #888;
+                    color: #777;
                     font-size: 1.6rem;
                 }
                 span:hover::before {
@@ -118,16 +132,9 @@ input.sui-search2:active + .sui-search3 {
     }
 }
 
+.navbar-nav,
+.navbar-toggler,
 .c-site__header-standalone {
-    height: 4.5rem;
-    padding: 0;
-    display: none;
-}
-.navbar-toggler {
-    // for mobile menu display, this still needs work with mobile menu setup
-    display: none;
-}
-.navbar-nav {
     display: none;
 }
 
