--- a/kmaps-app/src/main/SiteHeader/SiteHeader.scss
+++ b/kmaps-app/src/main/SiteHeader/SiteHeader.scss
@@ -51,33 +51,29 @@
     // --- Search Box ----
     // -------------------
     .c-site__search {
-        margin-top: 0.75rem;
+        margin-top: 0.9rem;
         padding-left: 0.5rem;
         .sui-search1 {
             position: relative;
             input.sui-search2 {
                 font-size: 1.65rem;
-                padding: 0.4rem 8.5rem 0.15rem 1.75rem;
+                padding: 0.4rem 8.5rem 0.25rem 1.75rem;
                 background: transparent;
                 border: none;
-                border-bottom: 0.1rem solid rgba(78, 90, 201, 0.38);
+                border-bottom: 0.1rem solid #999;
                 margin: 0;
                 width: 24rem;
-                /*  box-shadow: inset 0 0.25rem 0.75rem #aaa; */
                 border-radius: 2rem;
                 border-radius: 0.15rem;
                 transition: width 0.5s;
                 color: #555;
                 box-shadow: none;
-
+                background: transparent;
                 &:focus,
                 &:active {
-                    width: 32rem;
-                }
-                &:-webkit-direct-focus {
-                    outline-color: transparent;
-                    outline-style: none;
-                    outline-width: 0;
+                    width: 34rem;
+                    outline: none;
+                    background: #fff;
                 }
             }
             .sui-search3 {
